# parsec

./: CMakeLists.txt
cmake_modules/: Findlevel-zero.cmake
contrib/: ompi_cuda_visibility
parsec/: CMakeLists.txt  data.c  data.h  data_internal.h  parsec.c  parsec_comm_engine.c  parsec_internal.h  parsec_mpi_funnelled.c  parsec_prof_grapher.c  profiling.c  profiling.h  profiling_otf2.c  remote_dep.c  remote_dep.h  remote_dep_mpi.c  scheduling.c
parsec/class/: parsec_rwlock.c  parsec_rwlock.h
parsec/data_dist/matrix/: map_operator.c
parsec/include/parsec/: parsec_config_bottom.h  parsec_options.h.in
parsec/interfaces/: interface.c
parsec/interfaces/dtd/: insert_function.c  parsec_dtd_data_flush.c
parsec/interfaces/ptg/ptg-compiler/: jdf2c.c
parsec/interfaces/superscalar/: insert_function.c  insert_function_internal.h
parsec/mca/: mca_repository.c
parsec/mca/device/: device.c  device.h  device_gpu.c  device_gpu.h  transfer_gpu.c
parsec/mca/device/cuda/: device_cuda_component.c  device_cuda_internal.h  device_cuda_module.c
parsec/mca/device/level_zero/: device_level_zero.h  device_level_zero_component.c  device_level_zero_module.c  transfer.c
parsec/mca/pins/: pins.c  pins.h  pins_init.c
parsec/mca/pins/alperf/: pins_alperf_module.c
parsec/mca/pins/dot_grapher/: pins_dot_grapher.h  pins_dot_grapher_component.c  pins_dot_grapher_module.c
parsec/mca/pins/iterators_checker/: pins_iterators_checker_module.c
parsec/mca/pins/papi/: pins_papi_module.c
parsec/mca/pins/print_steals/: pins_print_steals_module.c
parsec/mca/termdet/: termdet.h
tests/dsl/dtd/: dtd_test_cuda_again_async.c  dtd_test_cuda_task_insert.c  dtd_test_new_tile.c  dtd_test_simple_gemm.c
tests/dsl/ptg/cuda/: nvlink.jdf  (+1 more)
tests/runtime/cuda/: CMakeLists.txt  mpi_supports_gpu_direct.c
tests/subsystem/: CMakeLists.txt
tests/subsystem/level_zero/: interface.dpcpp.C  interface.dpcpp.h  kernel.dpcpp.C  main.c
tools/profiling/: CMakeLists.txt  dbpreader.h
tools/profiling/perfetto/: CMakeLists.txt  dbp2pf.cc
tools/profiling/python/: pbt2ptt.pyx
(+8 files in other folders)
